# Argon2_Calculator

./: .gitignore  Argon2_Calculator.pro  CMakeLists.txt  README.md  data.cpp  data.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
argon2/: argon2.c  core.h  encoding.h  ref.c
cmake/: argon2.cmake
src/: derivator.cpp  derivator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
